# excalidraw-to-svg

./: README.md  pyproject.toml
excalidraw_to_svg/: docker-compose.yml  excalidraw-svg.dockerfile  main.py
